--- a/style.css
+++ b/style.css
@@ -1,59 +1,72 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
-    background-color: mistyrose;
+    background-color: aquamarine;
 }
-.menu{
+header{
     text-align: center;
-    font-size: 60px;
+    background-image: linear-gradient(to right, blueviolet, red);
 }
-.conteudo{
-    
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+    gap: 45px;
+    /*background-color: beige;*/
+    /*min-width: 300px;*/
+    flex-wrap: wrap;/* usar essa config quando display for flex, para haver a quebra para mobile*/
 }
-.grid{
-    display: grid;
-    grid-template-columns: 300fr 300fr 300fr;
+.bloco-0{
+    background-color: blue;
+    text-align: justify;
+    width: 300px;
     height: 200px;
-    grid-gap: 20px;
-    text-align: left;
-    
+    border-radius: 10px;
 }
-.grid div{
-    font-size: 1.6rem;
-    background-color: mistyrose;
+.inter-blok_0{
+    position: relative;
+    background-color: red;
+    bottom: 55.5px;
+    left: 73.5%;
+    border-radius: 0px 10px 0px 0;
+    width: 80px;
+    height: 50px;
 }
-.beef{
-    text-align: right;
-    color: red; 
-    font-weight: bolder;    
-    z-index: 1;  
+.bloco-1{
+    background-color: blue;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
 }
-.content1{
-    text-align: left;
-    color: black;
-    background-color: aqua;
-    margin-top: 0;
-    box-shadow: 2px 2px 2px black;
+.inter-blok_1{
+    position: relative;
+    background-color: red;
+    left: 73.5%;
+    border-radius: 0px 10px 0px 0;
+    width: 80px;
+    height: 50px;
 }
-.fish{
-    text-align: right;
-    color: blueviolet;
-    font-weight: bolder;
+.bloco-2{
+    background-color: blue;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
 }
-.content2{
-    text-align: left;
-    color: black;
-    background-color: aqua;
-    margin-top: 0;
-    box-shadow: 2px 2px 2px black;
+.inter-blok_2{
+    position: relative;
+    background-color: red;
+    left: 73.5%;
+    border-radius: 0px 10px 0px 0;
+    width: 80px;
+    height: 50px;
 }
-.pasta{
-    text-align: right;
-    color: yellow;
-    font-weight: bolder;
-}
-.content3{
-    text-align: left;
-    color: black;
-    background-color: aqua;
-    margin-top: 0;
-    box-shadow: 2px 2px 2px black;
+.bloco-3{
+    background-color: blue;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;   
 }
